--- a/CybillTek/app/src/main/res/values/strings.xml
+++ b/CybillTek/app/src/main/res/values/strings.xml
@@ -9,4 +9,11 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="first_name">First Name :</string>
+    <string name="last_name">Last Name :</string>
+    <string name="birthday">Birthday :</string>
+    <string name="age">Age :</string>
+    <string name="email_address">Email Address :</string>
+    <string name="mobile_number">Mobile Number :</string>
+    <string name="address">Address :</string>
 </resources>
